--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <title>Bird Apps</title>
     <style>
       body {
-        background-color: #fbec2f;
+	background-image: url('logo.png');
+	background-position: center center; 
+	background-size: 50%;
+	background-repeat: no-repeat;
+	background-color: #fff;
         color: #414141;
         text-align: center;
         font-family: Helvetica, Arial, sans-serif;
