--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <html>
   <head> 
     <title>Bird Apps</title>
-    <style>
-      body {
-	background-image: url('logo.png');
-	background-position: center center; 
-	background-size: 50%;
-	background-repeat: no-repeat;
-	background-color: #fff;
-        color: #414141;
-        text-align: center;
-        font-family: Helvetica, Arial, sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </head>
   <body>
     <h1>BIRD APPS</h1>
