--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head> 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bird Apps</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
@@ -8,8 +12,33 @@
     <script src="assets/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h1>BIRD APPS</h1>
-    <p>Web + Mobile Enterprise Applications</p>
-    <small>birdapps.github.io</small>
+    <div class="header-wrapper">
+      <header class="container">
+        <img id="logo" src="assets/images/logo.png" />
+        <div class="bird_apps_title">
+          <h1>
+            Bird
+            <br />
+            <small>Apps</small>
+          </h1>
+        </div>
+      </header>
+    </div>
+    <section class="container what-we-do">
+      <div class="row">
+        <div class="col-xs-12 col-sm-2">
+          <p class="powerful-apps">We make powerful apps <span class="hidden-xs">for</span></p>
+        </div>
+        <div class="col-xs-7 col-sm-5">
+          <img src="assets/images/web.png" id="the_web" alt="The Web" />
+        </div>
+        <div class="pull-left hidden-xs">
+          <p class="ampersand">&</p>
+        </div>
+        <div class="col-xs-4 col-sm-4">
+          <img src="assets/images/mobile.png" id="the_mobile" alt="Mobile" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
