make it not so very bad looking as before

--- a/index.html
+++ b/index.html
@@ -15,31 +15,23 @@
     <![endif]-->
   </head>
   <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top hidden-xs">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <img src="assets/images/logo-white.png" alt="Bird Apps" />
-          </a>
-        </div>
-        <div id="navbar" class="navbar-right">
-          <ul class="nav navbar-nav">
-            <li><a href="#contact" type="button" class="empty-btn" data-toggle="modal" data-target="#contactModal">Why should you hire us?</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+    
+
 
     <!-- Begin page content -->
     <div class="container">
-      <div class="header visible-xs">
-        <img class="logo" alt="Bird Apps" src="assets/images/logo-white.png" />
-        <a href="#contact" class="empty-btn" type="button" data-toggle="modal" data-target="#contactModal">Why hire us?</a>
-      </div>
-      <div class="col-xs-12 col-md-5">
+
+      <header class="header text-center">
+        <div class="row">
+          <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+            <img src="assets/images/bird-apps.png" class="logo" alt="Bird Apps" />
+          </div>
+        </div>
+        <a href="#contact" type="button" class="empty-btn contact" data-toggle="modal" data-target="#contactModal">Hire us to develop your app</a>    
+      
+      </header>
+      <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
         <div class="projects">
-          <img src="assets/images/fat-sparrow.jpg" class="visible-xs" />
           <a href="https://chalkle.com" target="_blank">
             <img src="assets/projects/chalkle.jpg" alt="Chalkle.com" />
           </a>
@@ -68,7 +60,7 @@
             <p> 
               <strong>We measure the success of our applications in user experience.</strong> 
               <br />
-              Once a user <em>want</em> to use your application the hard work is done.
+              Once a user <em>wants</em> to use your application the hard work is done.
               <br />
               <br />
               <a href="#learn-more" class="margin-10 empty-btn toggle-learn-more learn-more">Learn More</a>
