fix contact card

--- a/index.html
+++ b/index.html
@@ -58,40 +58,55 @@
         <div class="modal-content  text-center">
           <div class="modal-body">
             <p> 
-              <strong>We measure the success of our applications in user experience.</strong> 
               <br />
-              Once a user <em>wants</em> to use your application the hard work is done.
+              <strong>Let us create great experiences for you and your customers</strong> 
               <br />
               <br />
-              <a href="#learn-more" class="margin-10 empty-btn toggle-learn-more learn-more">Learn More</a>
-              <a href="#learn-more" class="margin-10 empty-btn toggle-learn-more learn-more" style="display:none">Learn Less</a>
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="col-xs-6">
+                    <a href="tel:+64220127066" class="empty-btn col-xs-12 text-center">
+                      Call 022 012 7066
+                    </a>
+                  </div>
+                  <div class="col-xs-6">
+                    <a href="mailto:hello@birdapps.nz" class="empty-btn col-xs-12 text-center">
+                      Email hello@birdapps.nz
+                    </a>
+                  </div>
+                </div>
+                <br /><br />
+              </div>
             </p>
-            <div class="learn-more" style="display:none">
+            <div class="learn-more">
               <p>
-                Bird Apps is a Wellington based application design and development company. It represents the joint efforts of Matthew Kerr and Josh Dean who primary work on <a href="https://chalkle.com">Chalkle.com</a>. 
+                Bird Apps is a Wellington based design and development company operated by<br /> Matthew Kerr and Josh Dean who primarily work on <a href="https://chalkle.com">Chalkle.com</a>. 
               </p>
-              <p>
-                For new projects we will advise you on the best technologies for your purposes. 
-              </p>
-              <p> However in case you have an existing application you should know that we do most of our work in <strong>Ruby on Rails</strong>, though we also want projects in:
-                <ul>
-                  <li>iOS for iPhone & iPad</li>
-                  <li>Mac Desktop</li>
-                  <li>MVC.NET</li>
-                  <li>Windows Mobile</li>
-                  <li>Windows Desktop (Forms or WPF)</li>
-                </ul>
-              </p>
-              <br />
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="col-xs-12 col-md-6 text-left"> 
+                    <br />
+                    <strong>We want to develop your next</strong>
+                    <ul>
+                      <li>Web App</li>
+                      <li>iOS App</li>
+                      <li>Android App</li>
+                      <li>Web Api</li>
+                    </ul>
+                  </div>
+                  <div class="col-xs-12 col-md-6 text-left"> 
+                    <br />
+                    <strong>Our clients receive</strong>
+                    <ul>
+                      <li>Focus on user experience</li>
+                      <li>Modern Technologies</li>
+                      <li>Excellent Documentation</li>
+                      <li>Visibility of progress</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
-            <br />
-            <textarea class="form-control text-center" placeholder="Tell us about your project"></textarea>
-            <br />
-            <input type="text" placeholder="How should we get in contact with you?" class="form-control text-center" />
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Send</button>
           </div>
         </div>
       </div>
