contact card buttons look better on mobile

--- a/index.html
+++ b/index.html
@@ -64,15 +64,19 @@
               <br />
               <div class="row">
                 <div class="col-xs-12">
-                  <div class="col-xs-6">
+                  <div class="col-xs-12 col-md-6">
                     <a href="tel:+64220127066" class="empty-btn col-xs-12 text-center">
                       Call 022 012 7066
                     </a>
+                    <br  class="visible-xs"/>
+                    <br  class="visible-xs"/>
                   </div>
-                  <div class="col-xs-6">
+                  <div class="col-xs-12 col-md-6">
                     <a href="mailto:hello@birdapps.nz" class="empty-btn col-xs-12 text-center">
                       Email hello@birdapps.nz
                     </a>
+                    <br  class="visible-xs"/>
+                    <br  class="visible-xs"/>
                   </div>
                 </div>
                 <br /><br />
