can dismiss modal now

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <div class="modal-dialog">
         <div class="modal-content  text-center">
           <div class="modal-body">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <p> 
               <br />
               <strong>Let us create great experiences for you and your customers</strong> 
