spacing on desktop

--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
       <div class="row">
         <div class="col-xs-12 text-center">
           <p>
+            <br class="hidden-xs" />
+            <br class="hidden-xs" />
             <strong>
                 <span class="hidden-xs">Bird Apps is a </span>Wellington based apps company operated by<br /> Designer Matthew Kerr <br class="visible-xs" />and Developer Josh Dean. 
             </strong>
           </p>
           <a href="#contact" type="button" class="empty-btn contact hidden-xs" data-toggle="modal" data-target="#contactModal">Hire us to develop your app</a>    
-      
         </div>
       </div>
 
       <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+        <h2>Our Work</h2>
         <div class="projects">
           <a href="https://chalkle.com" target="_blank">
             <img src="assets/projects/chalkle.jpg" alt="Chalkle.com" />
