--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       </div>
 
       <div class="col-xs-12 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
-        <h2>Our Work</h2>
         <div class="projects">
           <a href="https://chalkle.com" target="_blank">
             <img src="assets/projects/chalkle.jpg" alt="Chalkle.com" />
@@ -78,14 +77,14 @@
               <br />
               <div class="row">
                 <div class="col-xs-12">
-                  <div class="col-xs-12 col-md-6">
+                  <div class="col-xs-12 col-sm-6">
                     <a href="tel:+64220127066" class="empty-btn col-xs-12 text-center">
                       Call 022 012 7066
                     </a>
                     <br  class="visible-xs"/>
                     <br  class="visible-xs"/>
                   </div>
-                  <div class="col-xs-12 col-md-6">
+                  <div class="col-xs-12 col-sm-6">
                     <a href="mailto:hello@birdapps.nz" class="empty-btn col-xs-12 text-center">
                       Email hello@birdapps.nz
                     </a>
@@ -99,7 +98,7 @@
             <div class="learn-more">
               <div class="row">
                 <div class="col-xs-12">
-                  <div class="col-xs-12 col-md-6 text-left"> 
+                  <div class="col-xs-12 col-sm-6 text-left"> 
                     <br />
                     <strong>We can help with your next</strong>
                     <ul>
@@ -109,7 +108,7 @@
                       <li>Web Api</li>
                     </ul>
                   </div>
-                  <div class="col-xs-12 col-md-6 text-left"> 
+                  <div class="col-xs-12 col-sm-6 text-left"> 
                     <br />
                     <strong>Our clients receive</strong>
                     <ul>
