add tpie and sspn screenies

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="hidden-xs">Bird Apps is a </span>Wellington based apps company operated by<br /> Designer Matthew Kerr <br class="visible-xs" />and Developer Josh Dean. 
             </strong>
           </p>
-          <a href="#contact" type="button" class="empty-btn contact hidden-xs" data-toggle="modal" data-target="#contactModal">Hire us to develop your app</a>    
+          <a href="#contact" type="button" class="empty-btn contact hidden-xs" data-toggle="modal" data-target="#contactModal">Hire us to design & develop your app</a>    
         </div>
       </div>
 
@@ -47,6 +47,14 @@
           <a href="https://chalkle.com" target="_blank">
             <img src="assets/projects/chalkle.jpg" alt="Chalkle.com" />
           </a>
+          <a href="http://sspn.me" target="_blank">
+            <img src="assets/projects/sspn.jpg" alt="SSPN.me" />
+          </a>
+
+          <a href="http://tpie.co.nz" target="_blank">
+            <img src="assets/projects/tpie.jpg" alt="tpie.co.nz" />
+          </a>
+
         </div>
       </div>
     </div>
