--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   </a>
                 </div>
               </div>
-              <div class="col-xs-12 col-sm-6 hidden-xs">
+              <div class="col-xs-12 col-sm-6">
                 <img class="project-image" />
               </div>
             </div>
